Tue Jun 25 16:11:28 2013  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: A few updates, clarify how escapes in strings
	  work, add lots of hyperlinks when mentioning functions.

Tue Jun 25 14:57:03 2013  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.17

Tue Jun 25 14:48:55 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplot.c: fix a very nasty infinite loop with a memory leak
	  on very very large zoom due to a numerical issue.

Fri Jun 14 15:19:19 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/gtkplot3d.c: fix placement of labels.

	* src/graphing.c: make surface plot slightly smaller so that it fits
	  on screen.

Fri Jun 14 12:01:24 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix precision when the starting limit is 0 or much
	  nearrer zero than the ending limit.  On left/right keys rotate 3d
	  plot, and on all arrow keys move about line plots

Fri Jun 14 10:48:41 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: finish updating GtkExtra to 3.0.5

Fri Jun 14 10:04:20 2013  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Properly report errors from saving files

Thu Jun 13 16:42:42 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: copied lots of the files from 3.0.5, only gtkplot3d,
	  gtkplotdt and gtkplotsurface remain unupdated

	* gtkextra/gtkplotps.c: updated to the 3.0.5 version part way, the
	  new one is still broken so the new geometry stuff is not there (it
	  is drawn still upside down and then rotated).  Also
	  a fix from James Cloos to change the EPS header to EPSF from PCF,
	  seems to fix PDF conversion.

	* src/graphing.c: allow PDF export by calling ps2pdf properly,
	  also don't show the epsi checkbox unless we are exporting to EPS

Thu Jun 13 00:12:46 2013  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*.c: start updating to gtkextra 3.0.5.  Only few files
	  converted: gtkplotcanvas.[ch], gtkplotpc.[ch], gtkextra.[ch],