@@ -1,3 +1,8 @@
+Wed Jun 26 14:33:09 2013  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c, src/funclibhelper.cP: implement subsecond precision
+	  in wait (approx 10ms) by simply passing in a noninteger number.
+
 Tue Jun 25 16:11:28 2013  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: A few updates, clarify how escapes in strings
